--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "@robertzhidealx/lyte",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/robertzhidealx"
-  },
-  "version": "0.0.5",
+  "name": "@robertz65/lyte",
+  "version": "0.0.3",
   "description": "A collection of highly extensible React components.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
