--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@robertz65/lyte",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "A collection of highly extensible React components.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@heroicons/react": "^1.0.6",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
@@ -49,6 +50,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -58,7 +61,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "@heroicons/react": "^1.0.5"
+    "@heroicons/react": "^1.0.5",
+    "react": "^18.2.0"
   }
 }
